// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutputPane matches snapshot 1`] = `
<div
  className="outputpane module-ok"
>
  <Connect(OutputIframe)
    isPublic={false}
    key="iframe"
    lastRelevantDeltaId={1}
    visible={false}
    wfModuleId={987}
    workflowId={123}
  />
  <TableView
    api={Object {}}
    isReadOnly={false}
    key="table"
    lastRelevantDeltaId={1}
    showColumnLetter={false}
    wfModuleId={987}
  />
</div>
`;

exports[`OutputPane renders when no module id 1`] = `
<div
  className="outputpane module-unreachable"
>
  <Connect(OutputIframe)
    isPublic={false}
    key="iframe"
    lastRelevantDeltaId={null}
    visible={false}
    wfModuleId={null}
    workflowId={123}
  />
  <TableView
    api={Object {}}
    isReadOnly={false}
    key="table"
    lastRelevantDeltaId={-1}
    showColumnLetter={false}
    wfModuleId={null}
  />
</div>
`;
